﻿drkns 19.01.2014 23:03:16 +0200 - build 3781

1. #0002294: Удален неиспользуемый код.

drkns 19.01.2014 21:18:14 +0200 - build 3780

1. Уточнение 3779.

drkns 19.01.2014 19:58:42 +0200 - build 3779

1. PVS & cppcheck warnings.

2. Рефакторинг.

drkns 19.01.2014 02:39:29 +0200 - build 3778

1. Рефакторинг.

shmuel 18.01.2014 20:50:43 +0200 - build 3777

1. Рефакторинг в системе макросов.

w17 17.01.2014 14:12:54 +0400 - build 3776

1. M#2557: Подверждение удаления нескольких файлов

   Добавлены 2 настройки (far:config):

   a) Interface.DelHighlightSelected -- bool, default = true
   true -- выделяем случай, когда список удаляемых объектов отличаеся от объекта под курсором.

   b) Interface.DelShowSelected -- int, default = 10
   При множественном удалении показываем имена. Не более чем заданное число,
   приведённое к диапазону 1..высота_экрана/2

   Старое поведение = (false, 1)

drkns 17.01.2014 09:50:47 +0200 - build 3775

1. Уточнение 3774.

drkns 16.01.2014 22:11:50 +0200 - build 3774

1. 0002565: Регрессия с повышением доступа и чтением папок

2. Рефакторинг.

w17 15.01.2014 16:38:20 +0400 - build 3773

1. Продолжение b3771

shmuel 14.01.2014 19:24:08 +0200 - build 3772

1. Рефакторинг в системе макросов.

w17 14.01.2014 16:58:53 +0400 - build 3771

1. M#2556: Crash in Help if macro has lots of keys assigned

shmuel 14.01.2014 11:15:34 +0200 - build 3770

1. Рефакторинг в системе макросов.

w17 13.01.2014 00:08:49 +0400 - build 3769

1. M#2558: Слияние блок Undo не учитывает сохранение файла (from CyberShadow)

drkns 12.01.2014 13:24:37 +0200 - build 3768

1. Уточнение 3767.

drkns 12.01.2014 00:21:01 +0200 - build 3767

1. Падение при отсутствии прав на запись в профиль.

2. "Правильными" плагинами могли считаться и неподдерживаемые, например от Far 2.

3. Рефакторинг.

shmuel 11.01.2014 23:43:43 +0200 - build 3766

1. M#2551: Object.Height/Width не работают в меню.

drkns 09.01.2014 00:20:44 +0200 - build 3765

1. Уточнение 3752 для плагиновых панелей.
