@@ -1,4 +1,8 @@
-﻿drkns 19.01.2014 23:03:16 +0200 - build 3781
+﻿shmuel 21.01.2014 19:26:55 +0200 - build 3782
+
+1. Рефакторинг в системе макросов.
+
+drkns 19.01.2014 23:03:16 +0200 - build 3781
 
 1. #0002294: Удален неиспользуемый код.
 
